tests/paczka1/fuzzy1/50324537.err
Error in line 1: F62Nuy A959 23,3
Error in line 15: A539 A739 15,5
Error in line 30: SbB8unN4k S61 36,5
Error in line 31: SbB8unN4k A959 78,7
Error in line 34: SbB8unN4k S61 2,1
